# cmake_cpp_starter

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_test.sh
.github/workflows/: cmake.yml
src/: Main.cpp  args.cpp  args.h  cpp_starter.cpp  project_creator.cpp  project_creator.h
